feat(ffi): implement extern function support and enhance FFI diagnostics